# rt-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  build.sh  tools.sh
src/: bsdf.h  bsdf.hpp  buffers.cpp  buffers.h  buffers.hpp  debugging.h  debugging.hpp  embree_helpers.hpp  external.h  external.hpp  fexr.cpp  geo.cpp  geo.h  geo.hpp  ggx.hpp  image.cpp  image.h  image.hpp  main.cpp  mesh_loading.cpp  mesh_loading.hpp  pcg.h  sampling.cpp  sampling.h  sampling.hpp  scene.cpp  scene.h  scene.hpp  test.cpp  tev.cpp  tev.hpp  util.hpp
